--- a/index.html
+++ b/index.html
@@ -21,61 +21,61 @@
         <div class="r1 1">
             <img src="image/endgame post.jpg" alt="endgame post">
             <div class="mtitle">
-                <a class="mname" href="/movie review/image/endgame post.jpg ">Avengers: Endgame</a>
+                <a class="mname" href="image/endgame post.jpg ">Avengers: Endgame</a>
                 <p class="rate">8.4</p>
             </div>    
         </div>
         <div class="r1 2">
-            <img src="/movie review/image/sipder into verse post.jpg" alt="">
+            <img src="image/sipder into verse post.jpg" alt="">
             <div class="mtitle">
                 <a class="mname" href="">Spider-Man: Into Spider-Versre</a>
                 <p class="rate">8.4</p>
             </div> 
         </div>
         <div class="r1 3">
-            <img src="/movie review/image/WHAG post.jpg" alt="">
+            <img src="image/WHAG post.jpg" alt="">
             <div class="mtitle">
                 <a class="mname" href="">We Have a Ghost</a>
                 <p class="rate">6.1</p>
             </div> 
         </div>
         <div class="r1 4">
-            <img src="/movie review/image/predator post.jpg" alt="">
+            <img src="image/predator post.jpg" alt="">
             <div class="mtitle">
                 <a class="mname" href="">Predator</a>
                 <p class="rate">5.3</p>
             </div>
         </div>
         <div class="r1 1">
-            <img src="/movie review/image/cz 12 post.jpg" alt="">
+            <img src="image/cz 12 post.jpg" alt="">
             <div class="mtitle">
                 <a class="mname" href="">CZ 12</a>
                 <p class="rate">6.0</p>
             </div>
         </div>
         <div class="r1 2">
-            <img src="/movie review/image/loki post.jpg" alt="">
+            <img src="image/loki post.jpg" alt="">
             <div class="mtitle">
                 <a class="mname" href="">Loki season 2</a>
                 <p class="rate">8.2</p>
             </div>
         </div>
         <div class="r1 3">
-            <img src="/movie review/image/harry potter col post.jpg" alt="">
+            <img src="image/harry potter col post.jpg" alt="">
             <div class="mtitle">
                 <a class="mname" href="">harry potter collection</a>
                 <p class="rate">7.6</p>
             </div>
         </div>
         <div class="r1 4">
-            <img src="/movie review/image/ff col post.jpg" alt="">
+            <img src="image/ff col post.jpg" alt="">
             <div class="mtitle">
                 <a class="mname" href="">Fast & Furious collection</a>
                 <p class="rate">6.5</p>
             </div>
         </div>
         <div class="r1 3">
-            <img src="/movie review/image/twilight.jpeg" alt="">
+            <img src="image/twilight.jpeg" alt="">
             <div class="mtitle">
                 <a class="mname" href="">twilight</a>
                 <p class="rate">5.3</p>
